# heyroute-video

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: indextts.md  manifest-v1.md
examples/: batch.yaml  news.yaml
src/heyroute_video/: __init__.py  cli.py  doctor.py  errors.py  events.py  manifest.py  pipeline.py  render.py  timeline.py  tools.py
src/heyroute_video/tts/: __init__.py  base.py  fake.py  index.py
tests/: test_build.py  test_index_adapter.py  test_manifest.py  test_timeline.py
